# faster-qwen3-tts-finetune

./: .gitignore  README.md  pyproject.toml
examples/: openai_server_custom.py
finetuning/: README.md  build_resume_init.py  eval_utils.py  manual_ar.py  prepare_data.py  recon_test.py  ref_infer.py  resgen_test.py  sft_12hz.py
qwen_tts/core/: __init__.py
qwen_tts/core/models/: modeling_qwen3_tts.py
qwen_tts/inference/: qwen3_tts_tokenizer.py
