[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["faster_qwen3_tts*", "qwen_tts*"]

[project]
name = "faster-qwen3-tts"
version = "0.2.6"
description = "Real-time Qwen3-TTS inference using manual CUDA graph capture"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Andres Marafioti" }]
keywords = ["tts", "qwen", "cuda", "cudagraph", "streaming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
# qwen_tts is now vendored in this repo (not a pip dependency), so its runtime deps live here.
# transformers is pinned to 4.57.3 because the finetuning loss-alignment fixes were verified
# against that version's ForCausalLMLoss behavior.
dependencies = [
    "transformers==4.57.3",
    "accelerate==1.12.0",
    "torch>=2.5.1",
    "torchaudio",
    "numpy",
    "soundfile",
    "librosa",
    "einops",
    "onnxruntime",
    "sox",
    "gradio",
    "huggingface-hub",
]

[project.optional-dependencies]
demo = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.7",
]

[project.scripts]
faster-qwen3-tts = "faster_qwen3_tts.cli:main"

[project.urls]
Homepage = "https://github.com/andimarafioti/faster-qwen3-tts"
Repository = "https://github.com/andimarafioti/faster-qwen3-tts"

[tool.setuptools.package-data]
qwen_tts = ["py.typed", "**/*.npz"]
